--- a/jsWaffleTemplate/assets/www/index.html
+++ b/jsWaffleTemplate/assets/www/index.html
@@ -20,7 +20,7 @@
 		</script>
 	</head>
 	<body onload="init()">
-		<h1>jsWaffle DEMO</h1>
+		<h1>*jsWaffle DEMO*</h1>
 		<div id="logo">
 			<div style="text-align:center;">
 				<img src="res/logo150.png" onclick="droid.vibrate()">
