--- a/trunk/jsWaffleTemplate/assets/www/index.html
+++ b/trunk/jsWaffleTemplate/assets/www/index.html
@@ -66,22 +66,51 @@
 		<div class="buttons">
 			<button class="func" id="bntLocation" onclick="getLoc()">Get Location</button>
 			<button class="func" onclick="cancelLoc()">Stop Location</button>
+			<button class="func" id="bntLocation2" onclick="getLoc2()">Get Location&Show Map</button>
 			<script>
 				var watchid = 0;
 				function getLoc() {
 					$("bntLocation").disabled = true;
+					/*
+					// jsWaffle original method
 					watchid = droid.getCurrentPosition(
 						function(lat, lon, alt) {
 							droid.vibrate(500);
-							//$("geo").innerHTML = lat + "," + lon + ":" + alt;
-							alert("geo://" + lat + "," + lon + "," + alt);
+							alert("geo:" + lat + "," + lon);
 							$("bntLocation").disabled = false;
 						},
 						function (err) { droid.vibrate(500); alert("err:" + err);}
 					);
+					*/
+					// HTML5 geolocation method
+					navigator.geolocation.getCurrentPosition(
+						function(position){
+							var lat = position.coords.latitude;
+							var lon = position.coords.longitude;
+						 	droid.vibrate(500);
+							alert("geo:" + lat + "," + lon);
+							$("bntLocation").disabled = false;
+						},
+						function(err) { alert("err:" + err); },
+						{"enableHighAccuracy": true}
+					);
 				}
 				function cancelLoc() {
 					droid.clearWatchPosition(watchid);
+				}
+				function getLoc2() {
+					$("bntLocation2").disabled = true;
+					navigator.geolocation.getCurrentPosition(
+						function(position){
+							var lat = position.coords.latitude;
+							var lon = position.coords.longitude;
+						 	droid.vibrate(500);
+							droid.startIntent("geo:" + lat + "," + lon);
+							$("bntLocation2").disabled = false;
+						},
+						function(err) { alert("err:" + err); },
+						{"enableHighAccuracy": false}
+					);
 				}
 			</script>
 		</div>
@@ -136,29 +165,35 @@
 		</script>
 		
 
-		<h2>File IO</h2>
+		<h2>File IO/localStorage</h2>
 		<div class="buttons">
-			<button class="func" onclick="TestSave()">Write File</button>
-			<button class="func" onclick="TestLoad()">Load File</button>
+			<button class="func" onclick="TestSaveFile()">Save File</button>
+			<button class="func" onclick="TestLoadFile()">Load File</button>
+			<button class="func" onclick="TestWriteStorage()">Counter Test(localStorage)</button>
 		</div>
-		<div class="disp" id="file_div">
-			&nbsp; ***
+		<div class="disp">
+			<div id="storage_disp">counter : ?</div>
 		</div>
 		<script>
-			function TestSave() {
+			function TestSaveFile() {
 				var txt = prompt("Input Text!!");
 				if (txt == "") { txt = "no input"; }
 				droid.saveText("hoge.txt", txt);
 				alert("Save Text");
 			}
-			function TestLoad() {
+			function TestLoadFile() {
 				var txt = droid.loadText("hoge.txt");
-				$("file_div").innerHTML = txt;
+				alert(txt);
+			}
+			function TestWriteStorage() {
+				var cnt = parseInt(localStorage.getItem("cnt"));
+				if (isNaN(cnt)) { cnt = 0; }
+				cnt++;
+				localStorage.setItem("cnt", cnt);
+				$("storage_disp").innerHTML = "counter : " + cnt;
 				droid.beep();
 			}
 		</script>
-		
-		
 		
 		
 		<h2>Database(SQLite)</h2>
@@ -276,6 +311,31 @@
 			}
 		</script>
 			
+		<h2>Dialog</h2>
+		<div class="buttons">
+			<button class="func" onclick="TestYesNoDialog()">dialogYesNo</button>
+			<button class="func" onclick="TestSelectDialog()">selectList</button>
+		</div>
+		<script>
+			function TestYesNoDialog() {
+				droid.dialogYesNo("Question 1", "Do you like sushi?",
+					function (answer) {
+						if (answer) {
+							alert("You like susi!");
+						} else {
+							alert("You do not like susi!");
+						}
+					}
+				);
+			}
+			function TestSelectDialog() {
+				droid.selectList("Select Color",
+					["red","blue","green","white"],
+					function(answer){
+						alert("You select: " + answer);
+					});
+			}
+		</script>
 		
 		<br/>
 		<br/>
