--- a/trunk/jsWaffleTemplate/assets/www/index.html
+++ b/trunk/jsWaffleTemplate/assets/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>  
 <html>
 	<head>
+		<meta charset="utf-8">
 		<style>
 			*  { padding:0; margin:0; }
 			h1 { background-color: #990000; color: white; padding:8px; text-align: center; }
