--- a/trunk/jsWaffleTemplate/assets/www/index.html
+++ b/trunk/jsWaffleTemplate/assets/www/index.html
@@ -13,7 +13,7 @@
 			div.buttons { padding: 9px; text-align:center; font-size:18px; }
 			div.disp { background-color:#FFCCCC; color:#009; font-size:16px; padding: 16px; margin: 16px;}
 		</style>
-		<script type="text/javascript" src="./jsWaffle.js"></script>
+		<script type="text/javascript" src="jsWaffle.js"></script>
 		<script type="text/javascript">
 			function init() {
 				$("ver").innerHTML = droid.getWaffleVersion();
