--- a/jsWaffleTemplate/assets/www/index.html
+++ b/jsWaffleTemplate/assets/www/index.html
@@ -328,6 +328,9 @@
 		<div class="buttons">
 			<button class="func" onclick="TestYesNoDialog()">dialogYesNo</button>
 			<button class="func" onclick="TestSelectDialog()">selectList</button>
+			<button class="func" onclick="TestMultiSelectDialog()">multiSelectList</button>
+			<button class="func" onclick="TestDatePickerDialog()">datePickerDialog</button>
+			<button class="func" onclick="TestTimePickerDialog()">timePickerDialog</button>
 		</div>
 		<script>
 			function TestYesNoDialog() {
@@ -345,8 +348,25 @@
 				droid.selectList("Select Color",
 					["red","blue","green","white"],
 					function(answer){
-						alert("You select: " + answer);
+						alert("Your selection: " + answer);
 					});
+			}
+			function TestMultiSelectDialog() {
+				droid.multiSelectList("Select Color", 
+					["black","white","red","green","blue"], 
+					function(r){
+						alert("Your selection:" + r.join(","));
+					});
+			}
+			function TestDatePickerDialog() {
+				droid.datePickerDialog(function(y, m, d){
+					alert("select:" + new Date(y,m,d).toLocaleString());
+				});
+			}
+			function TestTimePickerDialog() {
+				droid.timePickerDialog(function(hour, minute){
+					alert("select:" + hour + ":" + minute);
+				});
 			}
 		</script>
 		
