--- a/trunk/jsWaffleTemplate/assets/www/index.html
+++ b/trunk/jsWaffleTemplate/assets/www/index.html
@@ -56,6 +56,47 @@
 		
 		<!-- *** sample *** -->
 		
+		<h2>Dialog Sample</h2>
+		<div class="buttons">
+			<button class="func" onclick="TestYesNoDialog()">dialogYesNo</button>
+			<button class="func" onclick="TestSelectDialog()">dialogList</button>
+			<button class="func" onclick="TestDialogCheckboxList()">dialogCheckboxList</button>
+			<button class="func" onclick="TestDatePickerDialog()">dialogDatePicker</button>
+			<button class="func" onclick="TestTimePickerDialog()">dialogTimePicker</button>
+			<button class="func" onclick="TestSeekbarDialog()">dialogSeekbar</button>
+		</div>
+		<script>
+			function TestYesNoDialog() {
+				var answer = droid.dialogYesNo("Question", "Do you like sushi?");
+				if (answer) {
+					alert("You like Sushi!");
+				} else {
+					alert("You do not like Sushi!");
+				}
+			}
+			function TestSelectDialog() {
+				var selectedItem = droid.dialogList("Select Color", ["red","blue","green","white"]);
+				alert("color:" + selectedItem);
+			}
+			function TestDialogCheckboxList() {
+				var selectedItems = droid.dialogCheckboxList("Select Color", 
+						["black","white","red","green","blue"]);
+				alert("color:" + selectedItems.join(","));
+			}
+			function TestDatePickerDialog() {
+				var result = droid.dialogDatePicker(new Date());
+				alert(result.toString());
+			}
+			function TestTimePickerDialog() {
+				var result = droid.dialogTimePicker(0,0);
+				alert(result);
+			}
+			function TestSeekbarDialog() {
+				var value = droid.dialogSeekbar("Select value", 0, 100, 50);
+				alert("value="+ value);
+			}
+		</script>
+		
 		<h2>Beep/Ring/Vibrate</h2>
 		<div class="buttons">
 			<button class="func" onclick="droid.beep()">beep</button>
@@ -324,56 +365,6 @@
 			}
 		</script>
 			
-		<h2>Dialog</h2>
-		<div class="buttons">
-			<button class="func" onclick="TestYesNoDialog()">dialogYesNo</button>
-			<button class="func" onclick="TestSelectDialog()">selectList</button>
-			<button class="func" onclick="TestMultiSelectDialog()">multiSelectList</button>
-			<button class="func" onclick="TestDatePickerDialog()">datePickerDialog</button>
-			<button class="func" onclick="TestTimePickerDialog()" id="time_btn">timePickerDialog</button>
-		</div>
-		<script>
-			function TestYesNoDialog() {
-				droid.dialogYesNo("Question 1", "Do you like sushi?",
-					function (answer) {
-						if (answer) {
-							alert("You like susi!");
-						} else {
-							alert("You do not like susi!");
-						}
-					}
-				);
-			}
-			function TestSelectDialog() {
-				droid.selectList("Select Color",
-					["red","blue","green","white"],
-					function(answer){
-						alert("Your selection: " + answer);
-					});
-			}
-			function TestMultiSelectDialog() {
-				droid.multiSelectList("Select Color", 
-					["black","white","red","green","blue"], 
-					function(r){
-						alert("Your selection:" + r.join(","));
-					});
-			}
-			function TestDatePickerDialog() {
-				var d = new Date();
-				droid.datePickerDialog(d.getFullYear(), d.getMonth(), d.getDate(),
-					function(y, m, d){
-						alert("select:" + new Date(y,m,d).toString());
-					});
-			}
-			function TestTimePickerDialog() {
-				droid.timePickerDialog(0,0, function(hour, minute){
-					alert("select:" + hour + ":" + minute);
-					$("time_btn").disabled = false;
-				});
-				$("time_btn").disabled = true;
-			}
-		</script>
-		
 		<br/>
 		<br/>
 		<br/>
