--- a/jsWaffleTemplate/assets/www/index.html
+++ b/jsWaffleTemplate/assets/www/index.html
@@ -1,302 +1,61 @@
 <!DOCTYPE html>  
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="res/demo.css" />
-		<script type="text/javascript" src="jsWaffle.js"></script>
-		<script type="text/javascript" src="res/demo-common.js"></script>
-		<script type="text/javascript">
-			function init() {
-				$("ver").innerHTML = droid.getWaffleVersion();
-				setMyMenuItem();
-			}
-		</script>
-	</head>
-	<body onload="init()">
-		<h1>jsWaffle DEMO</h1>
-		<div id="logo">
-			<div style="text-align:center;">
-				<img src="res/logo150.png" onclick="droid.vibrate()">
-			</div>
-			<div style="text-align:center;margin-bottom:8px;">jsWaffle ver.<span id="ver" ></span></div>
+<head>
+	<meta charset="utf-8">
+	<script type="text/javascript" src="jsWaffle.js"></script>
+	<script type="text/javascript" src="res/demo-common.js"></script>
+	<link rel="stylesheet" type="text/css" href="res/demo.css" />
+	<script type="text/javascript">
+		function init() {
+			$("ver").innerHTML = droid.getWaffleVersion();
+			setMyMenuItem();
+		}
+	</script>
+</head>
+<body onload="init()">
+	<h1>jsWaffle DEMO</h1>
+	<div id="logo">
+		<div style="text-align:center;">
+			<img src="res/logo150.png" onclick="droid.vibrate()">
 		</div>
-		
-		<!-- *** sample *** -->
-		<h2>Dialog Sample</h2>
-		<div class="buttons">
-			<button onclick="window.location='test/dialogs.html'">Dialog Sample</button>
-		</div>
-		<h2>Beep/Ring/Vibrate</h2>
-		<div class="buttons">
-			<button class="func" onclick="droid.beep()">beep</button>
-			<button class="func" onclick="droid.ring()">ring</button>
-			<button class="func" onclick="droid.vibrate()">vibrate</button>
-			<button class="func" onclick="droid.makeToast('Hello!')">makeToast</button>
-		</div>
-		
-		<h2>Sound/Video</h2>	
-		<div class="buttons">
-			<button class="func" onclick="droid.playSound('res/beep.mp3')">Play MP3 in asset</button>
-			<button class="func" onclick="droid.startIntent('http://www.youtube.com/watch?v=kbRBQ5c51eo')">Play Video(YouTube)</button>
-		</div>
-		
-		<h2>Geolocation</h2>
-		<div class="buttons">
-			<button class="func" id="bntLocation" onclick="getLoc()">Get Location</button>
-			<button class="func" onclick="cancelLoc()">Stop Location</button>
-			<button class="func" id="bntLocation2" onclick="getLoc2()">Get Location&Show Map</button>
-			<script>
-				var watchid = 0;
-				function getLoc() {
-					$("bntLocation").disabled = true;
-					/*
-					// jsWaffle original method
-					watchid = droid.getCurrentPosition(
-						function(lat, lon, alt) {
-							droid.vibrate(500);
-							alert("geo:" + lat + "," + lon);
-							$("bntLocation").disabled = false;
-						},
-						function (err) { droid.vibrate(500); alert("err:" + err);}
-					);
-					*/
-					// HTML5 geolocation method
-					navigator.geolocation.getCurrentPosition(
-						function(position){
-							var lat = position.coords.latitude;
-							var lon = position.coords.longitude;
-						 	droid.vibrate(500);
-							alert("geo:" + lat + "," + lon);
-							$("bntLocation").disabled = false;
-						},
-						function(err) { alert("err:" + err); },
-						{"enableHighAccuracy": true}
-					);
-				}
-				function cancelLoc() {
-					droid.clearWatchPosition(watchid);
-				}
-				function getLoc2() {
-					$("bntLocation2").disabled = true;
-					navigator.geolocation.getCurrentPosition(
-						function(position){
-							var lat = position.coords.latitude;
-							var lon = position.coords.longitude;
-						 	droid.vibrate(500);
-							droid.startIntent("geo:" + lat + "," + lon);
-							$("bntLocation2").disabled = false;
-						},
-						function(err) { alert("err:" + err); },
-						{"enableHighAccuracy": false}
-					);
-				}
-			</script>
-		</div>
-		
-		<h2>Acceleration Sensor</h2>
-		<div class="buttons">
-			<button class="func" onclick="startAccel()">Start</button>
-			<button class="func" onclick="stopAccel()">Stop</button>
-		</div>
-		<div class="disp">
-			<div id="acX">x:0</div>
-			<div id="acY">y:0</div>
-			<div id="acZ">z:0</div>
-		</div>
-		<script>
-			function startAccel() {
-				droid.watchAccel(function(x,y,z) {
-					$("acX").innerHTML = "x:" + x;
-					$("acY").innerHTML = "y:" + y;
-					$("acZ").innerHTML = "z:" + z;
-				});
-			}
-			function stopAccel() {
-				droid.clearAccel();
-			}
-		</script>
-		
-		<h2>Shake !!</h2>
-		<div class="buttons">
-			<button class="func" id="btnShake" onclick="TestWatchShake()">Watch Shake</button>
-			<button class="func" onclick="TestClearShake()">Stop</button>
-		</div>
-		<div class="disp">
-			<div id="shake">shake : 0 times</div>
-		</div>
-		<script>
-			var shake_count = 0;
-			function TestWatchShake() {
-				$("btnShake").disabled = true;
-				droid.watchShake(function(){
-					// shake begin
-					droid.vibrate();
-					$("shake").innerHTML = "(* shaking *)";
-				}, function(){
-					// shake end
-					droid.beep();
-					shake_count++;
-					$("shake").innerHTML = "shake : " + shake_count + " times";
-				});
-			}
-			function TestClearShake(){
-				shake_count = 0;
-				droid.clearAccel();
-				droid.beep();
-				$("btnShake").disabled = false;
-			}
-		</script>
-		
+		<div style="text-align:center;margin-bottom:8px;">jsWaffle ver.<span id="ver" ></span></div>
+	</div>
+	
+	<!-- *** sample *** -->
+	<h2>Beep/Ring/Vibrate</h2>
+	<div class="buttons">
+		<button onclick="droid.beep()">beep</button>
+		<button onclick="droid.ring()">ring</button>
+		<button onclick="droid.vibrate()">vibrate</button>
+		<button onclick="droid.makeToast('Hello!')">makeToast</button>
+	</div>
+	
+	<h2>Mail/Tel</h2>
+	<div class="buttons">
+		<button onclick="TestSendMail()">Send Mail</button>
+		<button onclick="droid.startIntent('tel:117')">Call 117</button>
+	</div>
+	<script>
+		function TestSendMail() {
+			droid.startIntent("mailto:web@kujirahand.com?subject=About_jsWaffle&body=test");
+		}
+	</script>
+	
+	<h2>Sound/Video</h2>	
+	<div class="buttons">
+		<button onclick="droid.playSound('res/beep.mp3')">Play MP3 in asset</button>
+		<button onclick="droid.startIntent('http://www.youtube.com/watch?v=kbRBQ5c51eo')">Play Video(YouTube)</button>
+	</div>
+	
+	<h2>More Samples</h2>
+	<div class="buttons">
+		<button onclick="location.href='test/dialogs.html'">Dialogs Sample</button>
+		<button onclick="location.href='test/sensors.html'">Sensors Sample</button>
+		<button onclick="location.href='test/storages.html'">Storages Sample</button>
+		<button onclick="location.href='test/cameras.html'">Camera/Video Sample</button>
+	</div>
+	
+	<br/><br/><br/>
 
-		<h2>File IO/localStorage</h2>
-		<div class="buttons">
-			<button class="func" onclick="TestSaveFile()">Save File</button>
-			<button class="func" onclick="TestLoadFile()">Load File</button>
-			<button class="func" onclick="TestWriteStorage()">Counter Test(localStorage)</button>
-		</div>
-		<div class="disp">
-			<div id="storage_disp">counter : ?</div>
-		</div>
-		<script>
-			function TestSaveFile() {
-				var txt = prompt("Input Text!!");
-				if (txt == "") { txt = "no input"; }
-				droid.saveText("hoge.txt", txt);
-				alert("Save Text");
-			}
-			function TestLoadFile() {
-				var txt = droid.loadText("hoge.txt");
-				alert(txt);
-			}
-			function TestWriteStorage() {
-				var cnt = parseInt(localStorage.getItem("cnt"));
-				if (isNaN(cnt)) { cnt = 0; }
-				cnt++;
-				localStorage.setItem("cnt", cnt);
-				$("storage_disp").innerHTML = "counter : " + cnt;
-				droid.beep();
-			}
-		</script>
-		
-		
-		<h2>Database(SQLite)</h2>
-		<div id="db_buttons_div" class="buttons">
-			<button class="func" onclick="openDB()">Open DB</button>
-			<button class="func" onclick="insertDB()">Insert</button>
-			<button class="func" onclick="showDB()">Show</button>
-			<button class="func" onclick="clearDB()">Clear</button>
-		</div>
-		<div class="disp" id="db_div">
-			&nbsp; ***
-		</div>
-		<script>
-			var db = null;
-			function db_lockUI() {
-				$("db_buttons_div").style.visible = "hidden";
-			}
-			function db_unlockUI() {
-				$("db_buttons_div").style.visible = "visible";
-			}
-			function openDB(){
-				db_lockUI();
-				db = droid.openDatabase("test3.db");
-				droid.executeSql(db,
-					"CREATE TABLE IF NOT EXISTS test (name,value)",
-					function(){ alert('Open database!'); db_unlockUI(); },
-					function(e){ alert('Create database error:' + e); db_unlockUI(); }
-				);
-			}
-			function insertDB(){
-				if (db == null) { alert('DB not opened.'); return; }
-				db_lockUI();
-				var name = prompt("input name");
-				var val = prompt("input value");
-				val = parseInt(val);
-				droid.executeSql(db, 
-					"INSERT INTO test (name,value)VALUES('"+name+"',"+val+")",
-					function(){ alert("success!"); showDB(); db_unlockUI(); },
-					function(e){ alert("insert error:" + e); db_unlockUI(); }
-				);
-			}
-			function showDB() {
-				if (db == null) { alert('DB not opened.'); return; }
-				droid.executeSql(db, 
-					"SELECT * FROM test", 
-					testDB_selectResult,
-					function(e){alert("select error:" + e); db_unlockUI();}
-				);
-			}
-			function testDB_selectResult(result) {
-				var txt = "";
-				for (var i in result) {
-					var line = result[i];
-					for (var key in line) {
-						txt += key + ":" + line[key] + "<br/>";
-					}
-				}
-				$("db_div").innerHTML = txt;
-				db_unlockUI();
-			}
-			function clearDB() {
-				db_lockUI();
-				droid.executeSql(db, 
-					"DELETE from test",
-					function(){ alert("success!"); db_unlockUI(); },
-					function(e){alert("insert error:" + e); db_unlockUI(); }
-				);
-				$('db_div').innerHTML = "clear";
-			}
-		</script>		
-		
-		<h2>Mail/Tel</h2>
-		<div class="buttons">
-			<button class="func" onclick="TestSendMail()">Send Mail</button>
-			<button class="func" onclick="TestTel()">Call 117</button>
-		</div>
-		<script>
-			function TestSendMail() {
-				droid.startIntent("mailto:web@kujirahand.com?subject=About_jsWaffle&body=test");
-			}
-			function TestTel() {
-				droid.startIntent("tel:117");
-			}
-		</script>
-		
-		<h2>Camera/Video</h2>
-		<div class="buttons">
-			<button class="func" onclick="TestCamera()">Camera</button>
-			<button class="func" onclick="TestVideo()">Video</button>
-		</div>
-		<script>
-			function TestCamera() {
-				droid.startIntent("camera:///sdcard/hoge.jpg");
-			}
-			function TestVideo() {
-				droid.startIntent("video:///sdcard/hoge.mpg");
-			}
-		</script>
-		
-		<h2>Barcode(QR/1D)</h2>
-		<div class="buttons">
-			<button class="func" onclick="TestBarcode2d()">Scan QRCode</button>
-			<button class="func" onclick="TestBarcodeAuto()">Scan Barcode(Auto)</button>
-		</div>
-		<script>
-			function TestBarcode2d() {
-				droid.scanQRCode(function(str){
-					alert(str);
-				}, true);
-			}
-			function TestBarcodeAuto() {
-				droid.scanBarcode(function(str){
-					alert(str);
-				}, true);
-			}
-		</script>
-			
-		<br/>
-		<br/>
-		<br/>
-
-	</body>
+</body>
 </html>
