・(仕様変更)HTTP/HTTPSのサイトを開くとき、メイン画面を遷移するようにした ・loadSoundPoolのバグを修正

--- a/jsWaffleTemplate/assets/www/test/cameras.html
+++ b/jsWaffleTemplate/assets/www/test/cameras.html
@@ -53,7 +53,8 @@
 					if (code == 0) {
 						alert("canceled"); return;
 					}
-					droid.startIntent("mailto:test@example.com?subject=camera&attach=/sdcard/hoge.jpg");
+					var subject = encodeURI("[画像]");
+					droid.startIntent("mailto:test@example.com?subject="+subject+"&attach=/sdcard/hoge.jpg");
 				});
 		}
 		function TestVideo() {
