--- a/jsWaffleTemplate/assets/www/index.html
+++ b/jsWaffleTemplate/assets/www/index.html
@@ -52,7 +52,7 @@
 		// for SoundPool Test (ogg file)
 		var soundId = droid.loadSoundPool("file:///android_asset/www/res/beep.ogg");
 		function TestSoundPool() {
-			droid.playSoundPool(soundId, 2);
+			droid.playSoundPool(soundId);
 		}
 		var playerObj = null;
 		function TestPlayer() {
