--- a/jsWaffleTemplate/assets/www/test/storages.html
+++ b/jsWaffleTemplate/assets/www/test/storages.html
@@ -34,7 +34,7 @@
 		<button onclick="TestSaveFile()">Save File</button>
 		<button onclick="TestLoadFile()">Load File</button>
 		<button onclick="TestPref()">Counter Test(pref_get)</button>
-		<button onclick="RemovePref()">Remove Pref</button>
+		<button onclick="RemovePref()">Reset Counter</button>
 	</div>
 	<div class="disp">
 		<div id="storage_disp">counter : ?</div>
