--- a/jsWaffleTemplate/assets/www/test/storages.html
+++ b/jsWaffleTemplate/assets/www/test/storages.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../res/demo.css" />
+	<title>Storage Sample</title>
 	<script type="text/javascript" src="../jsWaffle.js"></script>
 	<script type="text/javascript" src="../res/demo-common.js"></script>
 	<script type="text/javascript">
@@ -22,7 +23,7 @@
 	<div id="logo">
 		<div style="text-align:center;">
 			<a href="../index.html">
-				<img src="../res/logo150.png">
+				<img src="../res/logo150.png" alt="jsWaffle">
 			</a>
 		</div>
 		<div style="text-align:center;margin-bottom:8px;">jsWaffle ver.<span id="ver" ></span></div>
@@ -39,7 +40,7 @@
 	<div class="disp">
 		<div id="storage_disp">counter : ?</div>
 	</div>
-	<script>
+	<script type="text/javascript">
 		function RemovePref() {
 			droid.pref_remove("counter");
 			alert(droid.pref_get("counter", 0));
@@ -104,7 +105,7 @@
 	<div class="disp" id="db_div">
 		&nbsp; ***
 	</div>
-	<script>
+	<script type="text/javascript">
 		var db = null;
 		function db_lockUI() {
 			$("db_buttons_div").style.visible = "hidden";
